# vscode-remote-python

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
