[tool.poetry]
name = "example"
version = "0.1.0"
description = "example package"
authors = ["T. Imanishi <foo@bar.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
